# UR10e

./: README.md  yolov8_training.ipynb
Arduino/: README.md  sketch_sep10a.ino  stepper.ino.ino
Camera/OAK-D Pro/: README.md
Camera/exo 174CU3/: README.md  exo174cu3_swarm2.py
Matlab/: README.md  RRT_algo.m  generateAndTransferLaunchScriptROS2GettingStarted.m
ROS2/: CMakeLists.txt  README.md  custom_end_effector.xacro  end_effector.urdf  package.xml  ur10e_home_and_up.cpp
ROS2/ur10e_task_manager/src/: ur10e_home_and_up.cpp
Yolov8_train/: Capture_image.py  Object_detection.py  README.md  create_aruco.py  get_intrinsics.py  yolov8_training.ipynb
